devops-template-java/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: java-deployment
  namespace: jenkins-cloud
spec:
  replicas: 1
  selector:
    matchLabels:
      deployment: sl
  template:
    metadata:
      labels:
        deployment: sl
    spc:
      containers:
        - args:
            - -jar
            - /opt/myapp.jar
            - --server.port=8080
            command:
              - java
            image: 
            imagePullPolicy: IfNotPresent
            lifecycle:
              preStop:
                exec:
                  command:
                    - /bin/sh
                    - -c
                    - /bin/sleep 30
            livenessProbe:
              failureThreshold: 3
              httpGet:
                path: /hello
                port: 8080
                scheme: HTTP
                initialDelaySeconds: 60
                periodSeconds: 15
                successThreshold: 1
              name: myapp
              ports:
                - containerPort: 8080
                  name: http
                  protocol: TCP
              readinessProbe:
                failureThreshold: 3
                httpGet:
                  path: /hello
                  port: 8080
                  scheme: HTTP
                periodSeconds: 15
                successThreshold: 1
                timeoutSeconds: 1
              resources:
                limits:
                  cpu: "1"
                  memory: 2Gi
                requests:
                  cpu: 100m
                  memory: 1Gi
                terminationMessagePath: /dev/termination-log
                terminationMessagePolicy: File
              dnsPolicy: ClusterFiresWithHostNet
              imagePullSecrets:
                - name:
