devops-template-java/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: java-service
  namespace: jenkins-cloud
spec:
  selector:
    deployment: java-dept
  type: NodePort
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
