devops-template-java/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: java-ingress
  namespace: jenkins-cloud
spec:
  rules:
    - host: sl.devops.cn
      http:
        paths:
          - backend:
              serviceName: java-service
              servicePort: 8080
            path: /
